[package]
name = "tic_tac_toe"
version = "0.1.0"
authors = ["LAURENT Louis <louis_laurent@aol.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
tic_tac_toe_q_learning = { git = "https://github.com/ulphidius/tic_tac_toe_q_learning.git", branch = "master" }
